0.8 - deprecate stock financial data
Deprecated stock financial data support. Will migrate to other sources.